--- a/surprisePage.html
+++ b/surprisePage.html
@@ -16,16 +16,16 @@
             <div class="section1_video">
                 <div class="section1_sub_video">
                     <div class="section1_sub_video_container">
-                        <img src="/images/photos/love1.png" alt="">
+                        <img src="images/photos/love1.png" alt="">
                         <div class="section1_sub_video_outside">
                             <!-- <img src="amit s.jpg" alt="" class="section1_video_footage"> -->
-                            <video src="/video/surprise_video.mp4" class="section1_video_footage" id="section1_video_footage" loop></video>
+                            <video src="video/surprise_video.mp4" class="section1_video_footage" id="section1_video_footage" loop></video>
                             <!-- <video id="section1_video_footage" width="100%" muted>
                                 <source src=/video/surprise_video.mp4" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video> -->
                         </div>
-                        <img src="/images/photos/love2.png" alt="">
+                        <img src="images/photos/love2.png" alt="">
                     </div>
 
                 </div>
@@ -43,33 +43,33 @@
             <div class="display_screen">
                 <div class="display_sub_screen">
                     <div class="display_sub_inner_screen1">
-                        <div class="scroll-item-big" id="big-scroll-item-1"><img src="/images/photos/image1.jpg" alt="" ></div>
-                        <div class="scroll-item-big" id="big-scroll-item-2"><img src="/images/photos/image2.jpg" alt="" ></div>
-                        <div class="scroll-item-big" id="big-scroll-item-3"><img src="/images/photos/image3.jpg" alt="" ></div>
-                        <div class="scroll-item-big" id="big-scroll-item-4"><img src="/images/photos/image4.jpg" alt="" ></div>
-                        <div class="scroll-item-big" id="big-scroll-item-5"><img src="/images/photos/image5.jpg" alt="" ></div>
-                        <div class="scroll-item-big" id="big-scroll-item-6"><img src="/images/photos/image6.jpg" alt="" ></div>
-                        <div class="scroll-item-big" id="big-scroll-item-7"><img src="/images/photos/image7.jpg" alt="" ></div>
-                        <div class="scroll-item-big" id="big-scroll-item-8"><img src="/images/photos/image8.jpg" alt="" ></div>
-                        <div class="scroll-item-big" id="big-scroll-item-9"><img src="/images/photos/image9.jpg" alt="" ></div>
-                        <div class="scroll-item-big" id="big-scroll-item-10"><img src="/images/photos/image10.jpg" alt="" ></div>
-                        <div class="scroll-item-big" id="big-scroll-item-11"><img src="/images/photos/image11.jpg" alt="" ></div>
+                        <div class="scroll-item-big" id="big-scroll-item-1"><img src="images/photos/image1.jpg" alt="" ></div>
+                        <div class="scroll-item-big" id="big-scroll-item-2"><img src="images/photos/image2.jpg" alt="" ></div>
+                        <div class="scroll-item-big" id="big-scroll-item-3"><img src="images/photos/image3.jpg" alt="" ></div>
+                        <div class="scroll-item-big" id="big-scroll-item-4"><img src="images/photos/image4.jpg" alt="" ></div>
+                        <div class="scroll-item-big" id="big-scroll-item-5"><img src="images/photos/image5.jpg" alt="" ></div>
+                        <div class="scroll-item-big" id="big-scroll-item-6"><img src="images/photos/image6.jpg" alt="" ></div>
+                        <div class="scroll-item-big" id="big-scroll-item-7"><img src="images/photos/image7.jpg" alt="" ></div>
+                        <div class="scroll-item-big" id="big-scroll-item-8"><img src="images/photos/image8.jpg" alt="" ></div>
+                        <div class="scroll-item-big" id="big-scroll-item-9"><img src="images/photos/image9.jpg" alt="" ></div>
+                        <div class="scroll-item-big" id="big-scroll-item-10"><img src="images/photos/image10.jpg" alt="" ></div>
+                        <div class="scroll-item-big" id="big-scroll-item-11"><img src="images/photos/image11.jpg" alt="" ></div>
                     </div>
                     <div class="display_sub_inner_screen2"></div>
                 </div>
             </div>
             <div class="scroll-container" id="scroll-container">
-                <div class="scroll-item" id="scroll-item-1"><img src="/images/photos/image1.jpg" alt="" ></div>
-                <div class="scroll-item" id="scroll-item-2"><img src="/images/photos/image2.jpg" alt="" ></div>
-                <div class="scroll-item" id="scroll-item-3"><img src="/images/photos/image3.jpg" alt="" ></div>
-                <div class="scroll-item" id="scroll-item-4"><img src="/images/photos/image4.jpg" alt="" ></div>
-                <div class="scroll-item" id="scroll-item-5"><img src="/images/photos/image5.jpg" alt="" ></div>
-                <div class="scroll-item" id="scroll-item-6"><img src="/images/photos/image6.jpg" alt="" ></div>
-                <div class="scroll-item" id="scroll-item-7"><img src="/images/photos/image7.jpg" alt="" ></div>
-                <div class="scroll-item" id="scroll-item-8"><img src="/images/photos/image8.jpg" alt="" ></div>
-                <div class="scroll-item" id="scroll-item-9"><img src="/images/photos/image9.jpg" alt="" ></div>
-                <div class="scroll-item" id="scroll-item-10"><img src="/images/photos/image10.jpg" alt="" ></div>
-                <div class="scroll-item" id="scroll-item-11"><img src="/images/photos/image11.jpg" alt="" ></div>
+                <div class="scroll-item" id="scroll-item-1"><img src="images/photos/image1.jpg" alt="" ></div>
+                <div class="scroll-item" id="scroll-item-2"><img src="images/photos/image2.jpg" alt="" ></div>
+                <div class="scroll-item" id="scroll-item-3"><img src="images/photos/image3.jpg" alt="" ></div>
+                <div class="scroll-item" id="scroll-item-4"><img src="images/photos/image4.jpg" alt="" ></div>
+                <div class="scroll-item" id="scroll-item-5"><img src="images/photos/image5.jpg" alt="" ></div>
+                <div class="scroll-item" id="scroll-item-6"><img src="images/photos/image6.jpg" alt="" ></div>
+                <div class="scroll-item" id="scroll-item-7"><img src="images/photos/image7.jpg" alt="" ></div>
+                <div class="scroll-item" id="scroll-item-8"><img src="images/photos/image8.jpg" alt="" ></div>
+                <div class="scroll-item" id="scroll-item-9"><img src="images/photos/image9.jpg" alt="" ></div>
+                <div class="scroll-item" id="scroll-item-10"><img src="images/photos/image10.jpg" alt="" ></div>
+                <div class="scroll-item" id="scroll-item-11"><img src="images/photos/image11.jpg" alt="" ></div>
 
             </div>
             <div class="button-container">
@@ -93,9 +93,9 @@
         <div class="section section3">
             <div class="sub-section3">
                 <div class="letter" id="letter">
-                    <img src="/images/letter2.png" alt="" id="letter2">
-                    <img src="/images/loveletter.jpg" alt="" id="loveletter" class="loveletter">
-                    <img src="/images/letter1.png" alt="" id="letter1">
+                    <img src="images/letter2.png" alt="" id="letter2">
+                    <img src="images/loveletter.jpg" alt="" id="loveletter" class="loveletter">
+                    <img src="images/letter1.png" alt="" id="letter1">
                 </div>
             </div>
         </div>
